# hikmicropy

./: .gitignore  LICENSE  README.en.md  README.md  environment.yml  pyproject.toml
docs/: make_demo_images.py
examples/: batch_process.py
src/hikmicropy/: __init__.py  calibration.py  cli.py  extractor.py  fusion.py  plotly_export.py
tests/: conftest.py  test_extractor.py  test_metadata.py  test_ocr_confidence.py  test_palette.py  test_plotly_export.py
